src/test/deca/context/valid/print/print-float.deca
// Description:
//    Programme minimaliste utilisant print.
//
// Resultats:
//    2.3

{
    float a;
    a = 2.3;
    print(a);
}