src/test/deca/context/invalid/print/println-n.deca
// Description:
//    Programme minimaliste utilisant println.
//
// Resultats:
//    erreur ligne 8

{
    println("\n");
}
